--- a/appsettings.json
+++ b/appsettings.json
@@ -10,7 +10,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Culturedb": "Server=localhost;Database=CultureWeb;user=root; password=;"
+    "Culturedb": "Server=containers-us-west-121.railway.app;Database=railway;user=postgres; password=4eGQPdksjOqcrkgnrAuu;"
   },
   "EmailConfiguration": {
     "From": "khmerculturalkh@gmail.com",
