--- a/railway.yml
+++ b/railway.yml
@@ -8,13 +8,14 @@ env: production
 services:
   - name: web
     type: web
-    env: 
+    env:
       # Add environment variables specific to your application here
       DOTNET_ROOT: /usr/share/dotnet
       DOTNET_CLI_TELEMETRY_OPTOUT: 1
       ASPNETCORE_ENVIRONMENT: Production
-    buildCommand: dotnet publish -c Release -o out
-    startCommand: ./out/CultureWeb
+    # Set the build command to use the correct .NET 7.0 SDK version
+    buildCommand: dotnet publish -c Release -o out /p:TargetFramework=net7.0
+    startCommand: ./out/Program
 
 # The version of Nixpacks to use
 version: 2
