--- a/appsettings.json
+++ b/appsettings.json
@@ -10,7 +10,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Culturedb": "Server=containers-us-west-121.railway.app;Database=railway;user=postgres; password=4eGQPdksjOqcrkgnrAuu;"
+    "Culturedb": ""
   },
   "EmailConfiguration": {
     "From": "khmerculturalkh@gmail.com",
@@ -18,5 +18,6 @@
     "Port": "465",
     "Username": "khmerculturalkh@gmail.com",
     "Password": "uszvttzwqjaqvpuf"
-  }
+  },
+
 }
