--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -56,8 +56,8 @@ jobs:
                              # https://help.github.com/en/actions/reference/workflow-syntax-for-github-actions#jobsjob_idruns-on
 
     env:
-      Solution_Name: CultureWeb                         # Replace with your solution name, i.e. MyWpfApp.sln.                
-      Wap_Project_Directory: CultureWeb    # Replace with the Wap project directory relative to the solution, i.e. MyWpfApp.Package.
+      Solution_Name: CultureWeb.sln                         # Replace with your solution name, i.e. MyWpfApp.sln.                
+      Wap_Project_Directory: CultureWeb.csproj    # Replace with the Wap project directory relative to the solution, i.e. MyWpfApp.Package.
       # Replace with the path to your Wap project, i.e. MyWpf.App.Package\MyWpfApp.Package.wapproj.
 
     steps:
