added Invariant = true

--- a/CultureWeb.csproj
+++ b/CultureWeb.csproj
@@ -7,6 +7,7 @@
     <UserSecretsId>aspnet-mobileshop-7a39096c-2c82-402d-aadc-9a1b13878042</UserSecretsId>
     <BaseOutputPath>bin</BaseOutputPath>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+	   <InvariantGlobalization>true</InvariantGlobalization>
   </PropertyGroup>
 
   <ItemGroup>
